# ppmage

./: CMakeLists.txt  README.md  main.cpp
include/: ppm.hpp
source/: ppm.cpp
